--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">kefu</string>
     <string name="action_settings">Settings</string>
+    <string name="buttom_1">首页</string>
+    <string name="buttom_2">资讯</string>
+    <string name="buttom_3">扫一扫</string>
+    <string name="buttom_4">社区</string>
+    <string name="buttom_5">我的</string>
+    <string name="kefu">Carefor</string>
 </resources>
