--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="buttom_3">扫一扫</string>
     <string name="buttom_4">社区</string>
     <string name="buttom_5">我的</string>
-    <string name="kefu">Carefor</string>
+    <string name="kefu">carefor</string>
 </resources>
