--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="buttom_4">社区</string>
     <string name="buttom_5">我的</string>
     <string name="kefu">carefor</string>
+    <string name="xml_test_data">要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n</string>
 </resources>
